[package]
name = "keybase-chat-tui"
version = "1.0.1"
authors = ["Nikolai Brendler <nbrendler@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "keybase-chat-tui-bin"
path = "src/main.rs"

[dependencies]
cursive = { version = "0.20.0", features = ["toml"] }
log = "0.4.8"
env_logger = "0.9.1"
serde =  { version = "1.0", features = ["derive"]}
serde_json = "1.0"
dirs = "4.0.0"
tokio = { version = "1.21.2", features = ["full"] }
async-trait = "0.1.41"

[dev-dependencies]
mockall = { version = "0.11.2", features = ["nightly"] }
